[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["rysky-boi <dave@rysk.finance>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.1"
requests = "^2.32.3"
tardis-client = "^1.3.10"
kagglehub = "^0.3.6"
matplotlib = "^3.10.0"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
statsmodels = "^0.14.4"
cvxpy = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
